# CrawlingCluster

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt  test.py  test_keyword_query.py  test_simple.py
common/: README.md
common/types/: __init__.py  _typing_crawling.py  _typing_llm.py  type_aliases.py
common/utils/: error_handling.py  logging_utils.py
config/: README.md  properties.py  selenium_setting.py  setting.py
config/cy/: database.yaml  url.conf
crawling/: main.py
crawling/config/: keywords.csv  properties.py  selenium_setting.py  setting.py  url.conf
crawling/src/core/abstract/: abstract_async_request.py
crawling/src/core/database/: async_mongo.py
crawling/src/core/stubs/: acquistion.pyi  logger.pyi
crawling/src/core/types/: __init__.py  _typing.py
crawling/src/driver/: __init__.py  api_news_driver.py  news_parsing.py  search.py  selenium_driver.py
crawling/src/driver/api_req/: api_news_driver.py
crawling/src/driver/daum/: daum_parsing.py  daum_selenium.py
crawling/src/driver/deep/: base_crawler.py  human_like_crawler.py  relevant_crawler.py
crawling/src/driver/google/: google_parsing.py  google_selenium.py
crawling/src/driver/investing/: investing_parsing.py  investing_selenium.py
crawling/src/parsing/: bs_parsing.py  news_parsing.py
crawling/src/utils/: acquisition.py  anti_bot_utils.py  logger.py  parsing_util.py  search_util.py  session_manager.py
crawling/src/utils/anti/: README.md  __init__.py  delay_controller.py  detector.py  human_like.py  mouse_controller.py  typing_controller.py
crawling/tests/: test_naver.py
databases/: README.md
databases/cache/: redis_cluster_manager.py  redis_manager.py  redis_singleton.py
databases/mongo/: article_repository.py  keyword_repository.py  source_repository.py
databases/services/: keyword_generator.py  question_manager.py  test_services.py
databases/services/data/: keyword.yaml  keywords.csv
databases/session/: __init__.py  manager.py  retry.py  storage.py  validator.py
llm/: README.md  keyword_extractor.py  keyword_gener.py  query_generator.py
src/core/abstract/: abstract_async_request.py
src/driver/: naver_news_driver.py  selenium_driver.py
src/parsing/: bs_parsing.py  news_parsing.py
src/utils/: parsing_util.py
tests/: sele_driver_test.py  test_api_req.py
