[project]
name = "crawlingcluster"
version = "0.1.0"
description = ""
authors = [
    {name = "skip"}
]
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "configparser (>=7.2.0,<8.0.0)",
    "setuptools (>=80.3.1,<81.0.0)",
    "faker (>=37.1.0,<38.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "konlpy (>=0.6.0,<0.7.0)",
    "jpype1 (>=1.5.2,<2.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "boto3 (>=1.38.8,<2.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "selenium (>=4.32.0,<5.0.0)",
    "selenium-stealth (>=1.0.6,<2.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "newspaper3k (>=0.2.8,<0.3.0)",
    "lxml[html-clean] (>=5.4.0,<6.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
